references and materials

--- a/workshops/Primer on Probabilistic Deep Learning (Workshop).ipynb
+++ b/workshops/Primer on Probabilistic Deep Learning (Workshop).ipynb
@@ -1848,6 +1848,22 @@
    "source": [
     "From the results above we can see that the model is more unsure on the predictions it got wrong this means it knows when the prediction may be wrong. These are great properties to have in a machine learning model, and is one of the advantages of probabilistic modelling."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0299e4f0",
+   "metadata": {},
+   "source": [
+    "# 8. References and Materials\n",
+    "\n",
+    "[1] - [Coursera: TensorFlow 2 for Deep Learning Specialization](https://www.coursera.org/specializations/tensorflow2-deeplearning)\n",
+    "\n",
+    "[2] - [Coursera: Deep Learning Specialization](https://www.coursera.org/specializations/deep-learning)\n",
+    "\n",
+    "[3] - [TensorFlow Probability Guides and Tutorials](https://www.tensorflow.org/probability/overview)\n",
+    "\n",
+    "[4] - [TensorFlow Probability Posts in TensorFlow Blog](https://blog.tensorflow.org/search?label=TensorFlow+Probability&max-results=20)"
+   ]
   }
  ],
  "metadata": {
@@ -1866,7 +1882,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
